add_library(nodes_lib STATIC
	../nodes/xmlattribute.c
	../nodes/xmldata.c
	../nodes/xmledit.c
	../nodes/xmlelement.c
	../nodes/xmlfree.c
	../nodes/xmlnode.c
	../nodes/xmlopen.c
	../nodes/xmlread.c
	../nodes/xmlscan.c
	../nodes/xmlschema.c
	../nodes/xmlselect.c
	../nodes/xmltree.c
	../nodes/xmlvalue.c
	)
